# time-evolving-heat-diffusion

./: README.md  main.py  pyproject.toml  visualization.py
